--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,22 +1,43 @@
+:root {
+  --background-color: rgb(41, 170, 153);
+  --text-color: #060214;
+  --border: 2px solid rgba(0 0 0 / 0.2);
+}
+
+.callout {
+	  max-width: 900px;
+    margin: 1rem;
+    border: 1px solid  rgba(0,0,0,.1);
+    padding: 1rem;
+    background-color: #2eba9082;
+    color: #190be0;
+}
+
+
 nav {
-  background-color:darkblue;
-  padding: 10px;
+  background-color: var(--background-color);
+  padding: 5px;
 }
 
 nav a {
-  color:white;
+  color: rgb(10, 2, 37);
   padding: 20px;
   display: block;
 }
 
 h1 {
-  color:darkblue;
+  color: var(--background-color);
+}
+
+h2 {
+  color: var(--background-color);
 }
 
 main img {
-  width: 150px;
+  float: right;
+  width: 280px;
   height: auto;
-  border: 1px solid black;
+  border: 2px solid black;
   padding: 2px;
   box-shadow : 0 0 30px gray;
 }
@@ -30,22 +51,22 @@ main {
 }
 
 aside {
-  width:20em;
-  margin:1em;
-  border:1px solid rgba(0,0,0,0.2);
-  padding:1em;
-  background-color: #eee;
-  color: #333;
-  text-align:center;
+  width: 20em;
+  margin: 1em;
+  border: var(--border);
+  padding: 1em;
+  background-color: #0e2ee3;
+  color: var(--text-color);
+  text-align: center;
 }
 
 aside img {
-  width:200px;
-  height:auto;
+  width: 320px;
+  height: auto;
 }
 
 footer {
-  margin-top:1em;
-  border-top:1px solid #000;
-  text-align:center;
+  margin-top: 1em;
+  border-top: 1px solid #000;
+  text-align: center;
 }
