--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,7 +1,15 @@
+body {
+  font-size: 16px;
+  font-family: Roboto, Arial, Arial, sans-serif;
+}
+
 * {
-  margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+body {
+  display: block;
 }
 
 :root {
@@ -13,33 +21,45 @@
 
 /*Class Selector*/
 .box {
-	  max-width: 800px;
-    margin: 1rem;
-    border: 1px solid rgba(0,0,0,.1);
-    padding: 1rem;
-    background-color: #cdf3ea;
-    color: #000;
+  max-width: 840px;
+  margin: 1rem;
+  border: 1px solid rgba(0,0,0,.1);
+  padding: 1rem;
+  background-color: #c7dcea;
+  color: #000;
 }
 
-
 nav {
-  background-color: var(--background-color);
-  padding: 5px;
+  background-color:steelblue;
+  padding: 1rem;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 nav a {
-  color: var(--title-color);
-  padding: 5px;
   display: block;
+  padding: 0.5rem;
+  text-decoration: none;
+  font-size: 1.2rem;
+  font-weight: 700;
+  color: #fff;
 }
 
 h1 {
   color: var(--title-color);
+  border-bottom: 2px solid #5a38c8;
 }
 
 h2 {
   color: var(--title-color);
   font-family: 'Georgia', serif;
+}
+
+h5 {
+  color: var(--title-color);
+  border-top: 2px solid #5a38c8;
+  text-align: center;
 }
 
 main img {
@@ -56,19 +76,25 @@ p {
   padding: 0;
 }
 
+.grid {
+  display: grid;
+  align-items: center;
+}
+
 main {
-  max-width: 840px;
+  grid-column: 2;
+  margin: 1rem;
 }
 
 aside {
-  width: 20em;
-  margin: 1em;
-  border: var(--border);
-  padding: 1em;
-  background-color: #e1f0f0;
-  color: var(--title-color);
-  text-align: center;
+  width: 20rem;
   position: relative;
+  grid-column: 1;
+  grid-row: 1;
+}
+
+aside {
+  display:block;
 }
 
 aside img {
@@ -79,14 +105,13 @@ aside img {
 
 aside h2 {
   position: absolute;
-  top: 30px;
+  top: 15px;
   left: 88px;
 }
 
-footer {
-  margin-top: 1em;
-  border-top: 1px solid #000;
-  text-align: center;
+header, grid, footer {
+  max-width: 840;
+  margin: 0 auto;
 }
 
 .indent {
