--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -5,9 +5,9 @@
 :root {
     --primary-color: #0b9e8d;
     --secondary-color: #010208d5;
-    --background-color: #cfcfb4;
+    --background-color: #b7b6b3;
     --accent-color: #78e9c5;
-    --highlight-color: #ebe9e8;
+    --highlight-color: #eee;
 }
 
 main {
