--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -41,7 +41,7 @@ h2, h3, h4, h5, h6 {
 }
 
 h5 {
-    color: var(--secondary-color)
+    color: var(--secondary-color);
     text-align: center;
 }
 
