--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -9,6 +9,7 @@
     --primary-color: #000000;
     --secondary-color: #000403;
     --background-color: #0b9e8d;
+    
     --accent-color: tomato;
     --text-shadow: #e0e03c;
     --highlight-color: rgb(255, 255, 255);
@@ -23,7 +24,7 @@ main {
 
 body {
     display : grid;
-    min-height: 100vh;
+    /*min-height: 100vh;*/
     grid-template-rows: auto 1fr auto;
 }
 
@@ -70,7 +71,6 @@ margin: 10px auto;
     background-color: var(--background-color);
     padding: 1rem;
     font-family:"Quicksand", Arial, serif;
- 
 }
 
 .logo img {
@@ -84,37 +84,47 @@ margin: 10px auto;
     justify-content: center;
     align-items: center;
     gap: 1rem;
- 
 }
 
-.hero h1 {
+.hero h1{
+    /*
     position: absolute;
-    text-align: center;
     padding: 2.5rem;
-    box-shadow: 0 0 0 #111;
-    opacity: 0.5;
+    opacity: 0.4;
     width: 100%;
     height: auto;
     top: 75px;
+    background: var(--background-color);*/
+    position: absolute;
+    top: 100px;
+    background-color: hsla(177, 71%, 69%, 0.5);
+    padding: 2.5rem;
+    /*box-shadow:0 0 30px #091711;*/
+    opacity: 0.7;
+    width: 1200px;
+    height: auto;
+    /*margin: 1rem;*/
 }
 
 h1 {
-    font-size: 4rem;
+    font-size: 5rem;
+    text-align: center;    
     color: var(--primary-color);
-    text-shadow: 3px 3px 5px var(--text-shadow);
-    background: var(--background-color);
+
+    /*text-shadow: 2px 0px 3px var(--text-shadow);*/
+
 }
 
 
 h2, h3, h4, h5 {
     font-family: 'Quicksand', serif;
     color: var(--secondary-color);
-    text-shadow: 3px 3px 5px var(--text-shadow);
+    /*text-shadow: 2px 0px 3px var(--text-shadow);*/
     margin-bottom: 1rem;
     text-align : center;
     justify-content: space-around;
 }
-h4 {
+h4,h5 {
     text-align : left;  
 }
 
@@ -123,7 +133,6 @@ h6 {
     color: var(--primary-color);
     text-shadow: 3px 3px 5px var(--text-shadow);
     margin-top: 0.3rem;
-    text-align : center;
     justify-content: space-around;
 }
 
@@ -157,10 +166,10 @@ p {
 .hero article {
     position: absolute;
     top: 360px;
-    background-color: hsla(143, 18%, 38%, 0.462);
+    background-color: hsla(26, 88%, 68%, 0.5);
     padding: 0.65rem;
-    box-shadow:0 0 30px #091711;
-    opacity: 1;
+    /*box-shadow:0 0 30px #091711;*/
+    opacity: 0.9;
     width: 1100px;
     height: 20%;
     margin: 3rem;
@@ -232,7 +241,10 @@ figure {
 }
 
 figcaption {
-    color: var(--highlight-color); 
+    font-family: 'Roboto', sans-serif;
+    color: var(--primary-color); 
+    /*font-size: larger;*/
+    text-align: center;
 }
 
 footer {
@@ -269,4 +281,110 @@ footer {
 .sociallinks img {
     width: 25px;
     height: auto;
+}
+
+/*Page Contact*/
+.company-information {
+    box-sizing: border-box;
+    border: 1px solid #ffffff;
+    width: 36%;
+    background: var(--background-color);
+    float: left;
+}
+.customer-service {
+    margin: 30px; 
+}
+
+
+aside {
+    box-sizing: border-box;    
+    /*margin: 2px;*/
+    border: 1px solid #ffffff;
+    width: 64%;
+    background: var(--background-color);
+    float: left;
+}
+.title1 {
+    font-size: 3rem;   
+}
+.title4 {
+    margin : 20px 30px;
+}
+
+.personal-information {
+    margin : 15px;
+}
+
+.our-employees {
+    margin : 15px;
+    width: 62%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+ 
+    /*border: 1px solid #ffffff;*/   
+}
+.our-employees figure {
+    max-width: 238px;
+    margin: 0 2px;
+    padding: 10px;
+    gap: 2rem;
+    border: 1px solid #ffffff;   
+}
+
+.our-employees figure figcaption {
+    text-align: center; 
+}
+
+.form {
+    box-sizing: border-box;    
+    margin: 16px 2rem;
+    display: flex;
+    flex-direction: column;
+
+    justify-content: space-around;
+    border: 1px solid #ffffff;   
+}
+
+.data-general {
+    float: left;
+    margin-left: 25px;
+    width: 45%;
+}
+
+.data-especific {
+    float: left;
+    margin-left: 25px;
+    width: 55%;
+}
+
+label {
+    display: flex;
+    color: var(--secondary-color);
+    margin-bottom: 12px;
+    width: 240px;
+}
+
+input {
+    width: 280px;
+    height: 30px;
+    margin-bottom: 24px;
+    align-items: center;   
+}
+/*
+.data-especific purpose label {
+    width: 240px;
+    cursor: pointer;
+    display: inline-block;
+    width: 100%;
+
+}
+*/    
+input[type=radio] {
+    border: 0px;
+    width: 40px;
+    height: 1.2rem;
+}
+button {
+    margin-top: 1rem;
 }
