--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -66,7 +66,7 @@ margin: 10px auto;
     margin: 1rem auto;
     display: grid;
     grid-template-columns: 0.4fr 110px 2fr auto;
-    border-bottom: 1px solid #ccc;
+    border-bottom: 1px solid var(--highlight-color);
     max-width: 1200px;
     background-color: var(--background-color);
     padding: 1rem;
@@ -168,7 +168,6 @@ p {
     top: 360px;
     background-color: hsla(26, 88%, 68%, 0.5);
     padding: 0.65rem;
-    /*box-shadow:0 0 30px #091711;*/
     opacity: 0.9;
     width: 1100px;
     height: 20%;
@@ -243,7 +242,6 @@ figure {
 figcaption {
     font-family: 'Roboto', sans-serif;
     color: var(--primary-color); 
-    /*font-size: larger;*/
     text-align: center;
 }
 
@@ -293,6 +291,22 @@ footer {
 }
 .customer-service {
     margin: 30px; 
+}
+iframe {
+    border: 1px solid black;
+}
+.map-responsive {
+    overflow:hidden;
+    padding-bottom: 94.25%;
+    position:relative;
+    height:0;
+}
+.map-reposnive iframe {
+    left:0;
+    top:0;
+    height:100%;
+    width:100%;
+    position:absolute;
 }
 
 aside {
@@ -387,23 +401,43 @@ input[type=checkbox] {
     height: 1.2rem;
 }
 
+/*
+btn {
+    text-decoration: none;
+    padding: 20px 50px;
+    font-size: 1.5rem;
+    text-align: center;
+    margin-inline: 100px;
+    display: inline-flex;
+    margin-inline-start: 240px;   
+    margin: 32px;
+} 
 
+.button1 {
+    background: var(--accent2-color);
+    color: var(--primary-color)
+    border-radius: 50px;
+    transition: transform 0.3s ease;
+}
+*/
 button {
+    color:var(--secondary-color);
+    border-radius: 40px;
+    box-shadow: 0 0 0 0 rgba(25, 15, 26, 0.227), 0 0 0 0 rgba(232, 87, 54, 0.296);
+    transition: transform 0.3s ease;
     background-color: var(--accent2-color);
     border: 10px;
     padding: 10px 35px;
     text-align: center;
-    color:var(--secondary-color);
     font-size: 16px;
+    font-weight: 600;
     margin: 4px 3px;
     cursor: pointer;
     display: inline-flex;
-    border-radius: 10px;
     margin-inline-start: 240px;
-
 }
 
-button:hover{
+button:hover {
     background-color: transparent;
     border: 1px solid var(--highlight-color);
     color: var(--primary-color)
