--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -297,11 +297,11 @@ iframe {
 }
 .map-responsive {
     overflow:hidden;
-    padding-bottom: 94.25%;
+    padding-bottom: 94.6%;
     position:relative;
     height:0;
 }
-.map-reposnive iframe {
+.map-reponsive iframe {
     left:0;
     top:0;
     height:100%;
@@ -350,7 +350,7 @@ aside {
 
 .form {
     box-sizing: border-box;    
-    margin: 16px 2rem;
+    margin: 10px 28px 17px 18px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -420,24 +420,24 @@ btn {
     transition: transform 0.3s ease;
 }
 */
-button {
+.button {
     color:var(--secondary-color);
     border-radius: 40px;
     box-shadow: 0 0 0 0 rgba(25, 15, 26, 0.227), 0 0 0 0 rgba(232, 87, 54, 0.296);
     transition: transform 0.3s ease;
     background-color: var(--accent2-color);
-    border: 10px;
-    padding: 10px 35px;
+    height: auto;
+    padding: 8px;
     text-align: center;
     font-size: 16px;
-    font-weight: 600;
-    margin: 4px 3px;
+    font-weight: 700;
+    margin: 4px 4px;
     cursor: pointer;
     display: inline-flex;
     margin-inline-start: 240px;
 }
 
-button:hover {
+.button:hover {
     background-color: transparent;
     border: 1px solid var(--highlight-color);
     color: var(--primary-color)
