--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -87,39 +87,25 @@ margin: 10px auto;
 }
 
 .hero h1{
-    /*
-    position: absolute;
-    padding: 2.5rem;
-    opacity: 0.4;
-    width: 100%;
-    height: auto;
-    top: 75px;
-    background: var(--background-color);*/
     position: absolute;
     top: 100px;
     background-color: var(--accent2-color);
     padding: 2.5rem;
-    /*box-shadow:0 0 30px #091711;*/
     opacity: 0.7;
     width: 1200px;
     height: auto;
-    /*margin: 1rem;*/
 }
 
 h1 {
     font-size: 5rem;
     text-align: center;    
     color: var(--primary-color);
-
-    /*text-shadow: 2px 0px 3px var(--text-shadow);*/
-
 }
 
 
 h2, h3, h4, h5 {
     font-family: 'Quicksand', serif;
     color: var(--secondary-color);
-    /*text-shadow: 2px 0px 3px var(--text-shadow);*/
     margin-bottom: 1rem;
     text-align : center;
     justify-content: space-around;
@@ -140,8 +126,8 @@ p {
     display: block;
     margin-block-start: 1em;
     margin-block-end: 1em;
-    margin-inline-start: 0px;
-    margin-block-end: 0px;
+    margin-inline-start: 10px;
+    margin-block-end: 10px;
     font-family: 'Roboto', sans-serif;
     color: var(--secondary-color);
     padding: 0.5rem;
@@ -177,20 +163,34 @@ p {
 .hero article img {
     width: 200px;
     height: 100%;
-    float: right;
+    float: left;
+    padding: 10px;
 }
 
 .history {
-    padding: 2rem 1rem;
+    padding: 1rem 1rem;
     background-color: var(--background-color);
     margin: 10px auto;
 }
 
 .history h2 {
-    font-size: 2rem;   
+    font-size: 3rem;   
 }
 
-.history-content {
+.history-content1 {
+    display: grid;
+    justify-items: stretch;
+    align-items:center;
+    justify-content: center;
+    align-content:center;
+    place-content: center;
+    grid-template-columns: 335px 340px 322px;
+    grid-template-rows: 70% 20%;
+    max-width: 1000px;
+    margin: 0 auto;
+    gap: 40px;
+}
+.history-content2 {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -198,31 +198,27 @@ p {
     margin: 0 auto;
     gap: 1rem;
 }
-
 .history-image {
     max-width: 100%;
     height: auto;
     margin: 1rem 0;
 }
-
 .adventure {
     padding: 2rem 1rem;
     background-color: var(--background-color);
-    margin: 10px auto;
+    margin: 0 1px;
 }
-
 .adventure h2 {
     font-size: 2rem;
     padding: 1rem;
 }
-
 .adventure-content {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-    max-width: 1000px;
-    margin: 0 auto;
+    max-width: 1120px;
+    margin: 0 20px;
     gap: 1rem;
 }
 
@@ -381,8 +377,9 @@ label {
 input {
     width: 280px;
     height: 30px;
+    border-radius: 40px;
     margin-bottom: 24px;
-    align-items: center;   
+    align-items: center;
 }
 
 .message1 {
@@ -402,32 +399,13 @@ input[type=checkbox] {
     height: 1.2rem;
 }
 
-/*
-btn {
-    text-decoration: none;
-    padding: 20px 50px;
-    font-size: 1.5rem;
-    text-align: center;
-    margin-inline: 100px;
-    display: inline-flex;
-    margin-inline-start: 240px;   
-    margin: 32px;
-} 
-
-.button1 {
-    background: var(--accent2-color);
-    color: var(--primary-color)
-    border-radius: 50px;
-    transition: transform 0.3s ease;
-}
-*/
 .button {
     color:var(--secondary-color);
     border-radius: 40px;
     box-shadow: 0 0 0 0 rgba(25, 15, 26, 0.227), 0 0 0 0 rgba(232, 87, 54, 0.296);
     transition: transform 0.3s ease;
     background-color: var(--accent2-color);
-    width: 240px;
+    width: 242px;
     height: 45px;
     padding: 8px;
     font-weight: 700;
@@ -439,5 +417,22 @@ btn {
     background-color: transparent;
     border: 1px solid var(--highlight-color);
     color: var(--primary-color)
-    
+}
+.button1 {
+    color:var(--secondary-color);
+    border-radius: 40px;
+    box-shadow: 0 0 0 0 rgba(25, 15, 26, 0.227), 0 0 0 0 rgba(232, 87, 54, 0.296);
+    transition: transform 0.3s ease;
+    background-color: var(--accent2-color);
+    width: 242px;
+    height: 45px;
+    padding: 12px 78px;
+    font-weight: 700;
+    margin-left: 15%
+}
+
+.button1:hover {
+    background-color: transparent;
+    border: 1px solid var(--highlight-color);
+    color: var(--primary-color)
 }
