--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -25,7 +25,7 @@ main {
 body {
     display : grid;
     /*min-height: 100vh;*/
-    grid-template-rows: auto 1fr auto;
+    /*grid-template-rows: auto 1fr auto;*/
 }
 
 nav {
@@ -145,7 +145,7 @@ p {
 .hero img {
     display: block;
     width: 100%;
-    height: 700px;
+    height: auto;
     object-fit:cover;
 }
 
@@ -199,9 +199,7 @@ p {
     gap: 1rem;
 }
 .history-image {
-    max-width: 100%;
-    height: auto;
-    margin: 1rem 0;
+    margin:25px;
 }
 .adventure {
     padding: 2rem 1rem;
@@ -307,18 +305,30 @@ iframe {
 
 aside {
     box-sizing: border-box;    
-    /*margin: 2px;*/
     border: 1px solid #ffffff;
     width: 64%;
     background: var(--background-color);
     float: left;
 }
+.body-aside {
+    margin-top: 50px;
+}
 .title2 {
     font-size: 2rem;   
 }
-
+.title3 {
+    font-size: 3rem;
+}
 .title4 {
     margin : 20px 30px;
+}
+.part-1{
+    margin-top: 20px;
+    margin-bottom: 40px;
+}
+.part-2{
+    margin-top: 50px;
+    margin-bottom: 24px;
 }
 
 .personal-information {
@@ -346,8 +356,9 @@ aside {
 }
 
 .form {
-    box-sizing: border-box;    
-    margin: 10px;
+    box-sizing: border-box;
+    width: 720px;
+    margin: 5px 15px 5px 20px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -410,7 +421,7 @@ input[type=checkbox] {
     padding: 8px;
     font-weight: 700;
     display: inline-flex;
-    margin-inline-start: 240px;
+    margin-inline-start: 120px;
 }
 
 .button:hover {
@@ -424,15 +435,137 @@ input[type=checkbox] {
     box-shadow: 0 0 0 0 rgba(25, 15, 26, 0.227), 0 0 0 0 rgba(232, 87, 54, 0.296);
     transition: transform 0.3s ease;
     background-color: var(--accent2-color);
-    width: 242px;
+    width: 234px;
     height: 45px;
-    padding: 12px 78px;
+    padding: 12px 68px;
     font-weight: 700;
-    margin-left: 15%
+    margin-left: 50px;
 }
 
 .button1:hover {
     background-color: transparent;
     border: 1px solid var(--highlight-color);
     color: var(--primary-color)
+}
+.sales-trips {
+    padding:10px;
+    background-color: var(--background-color);
+}
+
+.container2 {
+    border: solid 1px rgba(255, 255, 255, 0.2);
+}
+
+table {
+    color: var(--primary-color)
+    font-size: 10px;
+    table-layout: fixed;
+    border-collapse: collapse;
+}
+
+thead {
+    background: var(--accent2-color);
+}
+
+th {
+    padding: 35px 15px ;
+    font-weight: 700;
+    text-transform: uppercase;
+}
+
+td {
+    padding: 15px;
+    border-bottom: solid 1px rgba(255, 255, 255, 0.2);
+    text-align: center;
+}
+
+tbody tr {
+    cursor: pointer;
+}
+
+tbody tr:hover {
+    background: rgba(14, 212, 238, 0.4);
+}
+
+.container1 {
+    display: grid;
+    justify-content: space-around;
+    grid-template-columns: auto 275px 275px auto;
+    grid-template-rows: auto 310px 304px auto;
+    /*background-color: darkblue;
+    border: 1px solid black;*/
+    justify-items: center;
+    padding: 10px;
+    gap:10px;
+    width:100%;
+    height:auto;
+    grid-template-areas:
+       "pack1 pack2 pack3 pack4"
+       "pack5 t-info t-info t-info"
+       "pack6 t-info t-info t-info"
+       "base1 sign sign base2";
+}
+
+.pack1 {
+    font-family:"Roboto", Arial, sans-serif;
+    grid-area: pack1;
+    background-color: var(--highlight-color);
+    text-align: center;
+    font-size: 24px;  
+}
+
+.pack2 {
+    font-family:"Roboto", Arial, sans-serif;
+    grid-area: pack2;
+    background-color: var(--highlight-color);
+    text-align: center;
+    font-size: 24px;  
+}
+.pack3 {
+    font-family:"Roboto", Arial, sans-serif;
+    grid-area: pack3;
+    background-color: var(--highlight-color);
+    text-align: center;
+    font-size: 24px;  
+}
+
+.pack4 {
+    font-family:"Roboto", Arial, sans-serif;
+    grid-area: pack4;
+    background-color:var(--highlight-color);
+    text-align: center;
+    font-size: 24px;  
+}
+
+.pack5 {
+    font-family:"Roboto", Arial, sans-serif;
+    grid-area: pack5;
+    background-color: var(--highlight-color);
+    text-align: center;
+    font-size: 24px;  
+}
+
+.pack6 {
+    font-family:"Roboto", Arial, sans-serif;
+    grid-area: pack6;
+    background-color: var(--highlight-color);
+    text-align: center;
+    font-size: 24px;  
+}
+.t-info {
+    grid-area: t-info;
+    background-color:var(--highlight-color);
+    color:var(--primary-color);
+    text-align: center;
+}
+.base1 {
+    margin-top: 100px;
+    grid-area: base1;
+}
+.sign {
+    grid-area: sign;
+}
+.base2 {
+    margin-top: 100px;
+    grid-area: base2;
 }
