--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -240,7 +240,7 @@ figcaption {
 }
 
 footer {
-    margin: 0.05rem auto;
+    margin: 0.07rem auto;
     max-width: 1200px;
     text-align: center;
     background-color: var(--background-color);
@@ -254,8 +254,9 @@ footer {
 
 .footer-container {
     margin: 0.2rem 0.2rem;
+
     display: grid;
-    grid-template-columns: 950px 120px 80px; 
+    grid-template-columns: 850px 120px 180px; 
     width: 100%;
 }
 
@@ -266,7 +267,7 @@ footer {
 .sociallinks {
     display: flex;
     list-style: none;
-    justify-content: flex-end;
+    justify-content: center;
     align-items: center;
 }
 
@@ -279,12 +280,14 @@ footer {
 .company-information {
     box-sizing: border-box;
     border: 1px solid #ffffff;
-    width: 36%;
+    width: 35.5%;
+    margin-bottom: 1px;
     background: var(--background-color);
     float: left;
 }
 .customer-service {
-    margin: 30px; 
+    margin: 23px;
+    margin-bottom: 25px; 
 }
 iframe {
     border: 1px solid black;
@@ -299,14 +302,14 @@ iframe {
     left:0;
     top:0;
     height:100%;
-    width:100%;
+    width: 280px;
     position:absolute;
 }
 
 aside {
     box-sizing: border-box;    
     border: 1px solid #ffffff;
-    width: 64%;
+    width: 774px;
     background: var(--background-color);
     float: left;
 }
@@ -337,7 +340,7 @@ aside {
 
 .our-employees {
     margin : 15px;
-    width: 62%;
+    width: 62.5%;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -358,7 +361,7 @@ aside {
 .form {
     box-sizing: border-box;
     width: 720px;
-    margin: 5px 15px 5px 20px;
+    margin: 5px 15px 3px 20px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -373,7 +376,8 @@ aside {
 
 .data-especific {
     float: left;
-    margin-left: 25px;
+    margin-left: 0 25px 5px;
+
     width: 50%;
     justify-content: center;
 }
@@ -441,7 +445,6 @@ input[type=checkbox] {
     font-weight: 700;
     margin-left: 50px;
 }
-
 .button1:hover {
     background-color: transparent;
     border: 1px solid var(--highlight-color);
